<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_home"
            android:icon="@drawable/ic_icon_home"
            android:title="@string/nav_drawer_home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_drawer_about"
            android:icon="@drawable/ic_icon_about"
            android:title="@string/nav_drawer_about" />
        <item
            android:id="@+id/nav_drawer_admission"
            android:icon="@drawable/ic_icon_admission"
            android:title="@string/nav_drawer_admission" />
        <item
            android:id="@+id/nav_drawer_notice_board"
            android:icon="@drawable/ic_icon_notice_board"
            android:title="@string/nav_drawer_notice_board" />
        <item
            android:id="@+id/nav_drawer_contact"
            android:icon="@drawable/ic_icon_contact"
            android:title="@string/nav_drawer_contact" />
    </group>

    <item android:title="@string/nav_drawer_text_contact">
        <menu>
            <item
                android:id="@+id/nav_drawer_hotline"
                android:icon="@drawable/ic_icon_phone"
                android:title="@string/nav_drawer_text_hotline" />
            <item
                android:id="@+id/nav_drawer_email"
                android:icon="@drawable/ic_icon_email"
                android:title="@string/nav_drawer_text_email" />
            <item
                android:id="@+id/nav_drawer_social_facebook"
                android:icon="@drawable/ic_icon_social_facebook"
                android:title="@string/nav_drawer_text_facebook" />
            <item
                android:id="@+id/nav_drawer_website"
                android:icon="@drawable/ic_icon_website"
                android:title="@string/nav_drawer_text_website" />
        </menu>
    </item>

</menu>
